--- a/TocTiny/Properties/launchSettings.json
+++ b/TocTiny/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "TocTiny": {
       "commandName": "Project",
-      "commandLineArgs": "/NoCmd"
+      "commandLineArgs": "/?"
     }
   }
 }
