异常处理以及引发测试异常

--- a/TocTinyClient/TocTinyClient.csproj
+++ b/TocTinyClient/TocTinyClient.csproj
@@ -63,6 +63,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="TocErrorReport.xaml.cs">
+      <DependentUpon>TocErrorReport.xaml</DependentUpon>
+    </Compile>
     <Page Include="FrameHost.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -102,6 +105,10 @@
       <DependentUpon>Login.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="TocErrorReport.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PackageDef.cs" />
