--- a/TocTiny/Properties/launchSettings.json
+++ b/TocTiny/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "TocTiny": {
-      "commandName": "Project",
-      "commandLineArgs": "/?"
+      "commandName": "Project"
     }
   }
 }
