新版本, 基本通讯已解决, 事件套接字更新

--- a/TocTinyPublic/TocTinyPublic.csproj
+++ b/TocTinyPublic/TocTinyPublic.csproj
@@ -7,10 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CHO.Json\CHO.Json.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Library\" />
+    <ProjectReference Include="..\EventedSocket\EventedSocket.csproj" />
   </ItemGroup>
 
 </Project>
