--- a/TocTinyServerCore/TocTinyServerCore.csproj
+++ b/TocTinyServerCore/TocTinyServerCore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -8,10 +8,6 @@
     <ProjectReference Include="..\CHO.Json\CHO.Json.csproj" />
     <ProjectReference Include="..\EventedSocket\EventedSocket.csproj" />
     <ProjectReference Include="..\TocTinyPublic\TocTinyPublic.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Library\" />
   </ItemGroup>
 
 </Project>
